2009-11-03  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12231: New caching framework (4.3-dev) does not work with DBAL

2009-10-28  Xavier Perseguers  <typo3@perseguers.ch>

	* Added code to log all deprecated method calls
	* Added compatibility operators for PostgreSQL as resource script (thanks to Ries van Twisk)
	* Added message in Enterprise Manager to let users know compatibility scripts may need to be run

2009-10-27  Xavier Perseguers  <typo3@perseguers.ch>

	* Follow-up of changeset 25876: Using tx_dbal_sqlengine instead of t3lib_sqlengine for sample handlers
	* Created icons for extension and Debug module
	* Cleanup: Applied CGL

2009-10-26  Xavier Perseguers  <typo3@perseguers.ch>

	* RFC #12354: Included t3lib_sqlengine locally
	* Fixed bug #12349: Clean-up SQL parser and SQL engine

2009-10-20  Oliver Hader  <oliver@typo3.org>

	* Set version to 0.9.23

2009-10-08  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #6953: Mapping of fieldnames in SQL-functions like MIN(), MAX() or SUM() does not work (Thanks to Christian and Michael Miousse)

2009-10-01  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised version to 0.9.22

2009-09-29  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12071: t3lib_sqlparser is not able to parse alias of a joined table

2009-09-20  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12012: admin_get_tables() method is using PHP5.3-deprecated function mysql_list_tables

2009-09-18  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised version to 0.9.21

2009-09-18  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #11984: Remove reference operators for objects

2009-09-03  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #11436: Unknown tables break Install-Tool (Thanks to David Bruchmann)
	* Fixed bug #11108: DBAL wildly quotes fields and table names

2009-09-04  Karsten Dambekalns <karsten@typo3.org>

	* Raised version to 0.9.20

2008-02-04  Michael Stucki  <michael@typo3.org>
